@@ -26,11 +26,11 @@ class ResponseParser {
 
     private static final String LIST_DATA_KEY = "data";
 
-    <T> List<T> bindList(Class<T> clazz, Map<String, Object[]> response) throws InstantiationException, IllegalAccessException {
+    <T> List<T> bindList(Class<T> clazz, Map<String, Object[]> response) throws ReflectiveOperationException {
         Object[] rawData = response.get(LIST_DATA_KEY);
         List<T> list = new ArrayList<>(rawData.length);
         for (Object obj : rawData) {
-            list.add(bind(clazz.newInstance(), (Map) obj));
+            list.add(bind(clazz.getDeclaredConstructor().newInstance(), (Map) obj));
         }
         return list;
     }
